# wide-fighter

./: Cargo.toml  index.html  notes.md  trunk-make-ghpages.sh
assets/: manifest.json  sw.js
docs/: index.html  wide-fighter-3c0e6bec56f12607.js  wide-fighter-3c0e6bec56f12607_bg.wasm  wide-fighter-a2fa17911b0300ad.js  wide-fighter-bdb94353261a97ce.js  wide-fighter-bdb94353261a97ce_bg.wasm
src/: app.rs  fight.rs  fightclub.rs  main.rs  results.rs  soldiers.rs
