[package]
name = "wide-fighter"
version = "0.5.0"
authors = ["leklachu"]
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.15", features = ["js"] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
	"default_fonts",
	"glow", # alternative: wgpu backend
	"persistence",
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

